--- a/my_serials/templates/base.html
+++ b/my_serials/templates/base.html
@@ -28,7 +28,7 @@
   <link href="{% static "dark-mode.css" %}" rel="stylesheet">
 </head>
 <body>
-  <div class="container ml-10 mr-10">
+  <div class="container ml-10 mr-10" id="top">
     <div class="row justify-content-center">
       <div class="col-11 min-vh-100">
         <!--Navbar-->
@@ -90,7 +90,7 @@
         <!--Button-->
         {% block button %}{% endblock %}
         <!--Footer-->
-        <div class="container">
+        <div class="container" id="bottom">
           <nav class="navbar navbar-light bg-light my-footer">
             <span class="text-muted">Eldar Dniaprouski &copy 2020 Powered by Bootstrap</span>
           </nav>
