--- a/my_serials/templates/serial/details.html
+++ b/my_serials/templates/serial/details.html
@@ -5,225 +5,226 @@
 {% load static %}
 
 {% block content %}
-<div class="mt-3 mb-3">
-  <h2>Serial Details</h2>
-</div>
-
-<div class="media">
-  <div>
-    <div class="text-center">
-      <a data-fancybox="gallery{{ serial.id }}" href="https://image.tmdb.org/t/p/original{{ info.poster_path }}"><img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w200{{ info.poster_path }}" alt="Generic placeholder image"></a>
-    </div>
-    <p>
-      {% if info.in_production %}
-    <div class="alert alert-success mr-3 text-center" role="alert">
-      {{ info.status }}
-    </div>
-    {% if serial_id %}
-    <div class="text-center mb-3 mr-3">
-      <!-- Button trigger modal -->
-      <button type="button" class="btn btn-danger btn-block" data-toggle="modal" data-target="#ModalCenter{{ serial_id }}">Remove Serial</button>
-      <!-- Modal -->
-      <div class="modal fade" id="ModalCenter{{ serial_id }}" tabindex="-1" role="dialog" aria-labelledby="ModalCenter{{ serial_id }}Title" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <!-- Modal header -->
-            <div class="modal-header">
-              <h5 class="modal-title" id="ModalCenter{{ serial_id }}Title">{{ info.name }} ({{ year }})</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <!-- Modal body -->
-            <div class="modal-body">
-              Are you sure you want to remove this serial from your list?
-            </div>
-            <!-- Modal footer -->
-            <div class="modal-footer">
-              <a href="{% url 'my_serials:delete' %}{{ serial_id }}" class="btn btn-danger" role="button">Remove</a>
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
+  <div class="mt-3 mb-3">
+    <h2>Serial Details</h2>
+  </div>
+  <div class="media">
+    <div>
+      <div class="text-center">
+        <a data-fancybox="gallery{{ serial.id }}" href="https://image.tmdb.org/t/p/original{{ info.poster_path }}"><img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w200{{ info.poster_path }}" alt="Generic placeholder image"></a>
       </div>
-    </div>
-    {% else %}
-    <form action="{% url 'my_serials:add_serial' %}" method = "POST">
-      {% csrf_token %}
+      <p>
+        {% if info.in_production %}
+      <div class="alert alert-success mr-3 text-center" role="alert">
+        {{ info.status }}
+      </div>
+      {% if serial_id %}
       <div class="text-center mb-3 mr-3">
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-success btn-block" data-toggle="modal" data-target="#ModalCenter{{ info.id }}">Add to my List</button>
+        <button type="button" class="btn btn-danger btn-block" data-toggle="modal" data-target="#ModalCenter{{ serial_id }}">Remove Serial</button>
         <!-- Modal -->
-        <div class="modal fade" id="ModalCenter{{ info.id }}" tabindex="-1" role="dialog" aria-labelledby="ModalCenter{{ info.id }}Title" aria-hidden="true">
+        <div class="modal fade" id="ModalCenter{{ serial_id }}" tabindex="-1" role="dialog" aria-labelledby="ModalCenter{{ serial_id }}Title" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
               <!-- Modal header -->
               <div class="modal-header">
-                <h5 class="modal-title" id="ModalCenter{{ info.id }}Title">{{ info.name }} ({{ year }})</h5>
+                <h5 class="modal-title" id="ModalCenter{{ serial_id }}Title">{{ info.name }} ({{ year }})</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <!-- Modal body -->
               <div class="modal-body">
-                Add this serial to your list?
+                Are you sure you want to remove this serial from your list?
               </div>
               <!-- Modal footer -->
               <div class="modal-footer">
-                <button type="submit" name="serial_id" value="{{ info.id }}" class="btn btn-success">Add</button>
+                <a href="{% url 'my_serials:delete' %}{{ serial_id }}" class="btn btn-danger" role="button">Remove</a>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </form>
-    {% endif %}
-    {% else %}
-    <div class="alert alert-warning mr-3 text-center" role="alert">
-      {{ info.status }}
-    </div>
-    {% endif %}
-    </p>
-  </div>
-  <div class="media-body">
-    <h3 class="mt-0" align="center">{{ info.name }} ({{ year }})</h3>
-    <nav>
-      <div class="nav nav-tabs" id="nav-tab" role="tablist">
-        <a class="nav-item nav-link active" id="nav-overview-tab" data-toggle="tab" href="#nav-overview" role="tab" aria-controls="nav-overview" aria-selected="true">Overview</a>
-        <a class="nav-item nav-link" id="nav-cast-tab" data-toggle="tab" href="#nav-cast" role="tab" aria-controls="nav-cast" aria-selected="false">Cast</a>
-        <a class="nav-item nav-link" id="nav-creators-tab" data-toggle="tab" href="#nav-creators" role="tab" aria-controls="nav-creators" aria-selected="false">Creators</a>
-      </div>
-    </nav>
-    <div class="tab-content" id="nav-tabContent">
-      <div class="tab-pane fade show active" id="nav-overview" role="tabpanel" aria-labelledby="nav-overview-tab">
-        <br>
-        <p>Rating: {{ info.vote_average }}</p>
-        <p>{{ info.overview }}</p>
-      </div>
-      <div class="tab-pane fade" id="nav-cast" role="tabpanel" aria-labelledby="nav-cast-tab">
-        <br>
-        <div class="card-deck justify-content-center">
-          {% if cast %}
-          {% for member in cast %}
-          <div class="card mb-3" style="width: 135px; min-width: 135px; max-width: 135px;">
-            {% if member.profile_path %}
-              <a data-fancybox="gallery_cast" href="https://image.tmdb.org/t/p/w600_and_h900_bestv2{{ member.profile_path }}" data-caption="{{ member.name }}"><img class="card-img-top" src="https://image.tmdb.org/t/p/w138_and_h175_face{{ member.profile_path }}" alt=""></a>
-            {% else %}
-              <img class="align-self-start mr-3" src="{% static 'resources/no_avatar.jpg' %}" width="133px">
-            {% endif %}
-            <div class="card-body">
-              <div class="card-text">
-                <b>{{ member.name }}</b>
-                {% if member.character %}
-                as {{ member.character }}
-                {% endif %}
+      {% else %}
+      <form action="{% url 'my_serials:add_serial' %}" method = "POST">
+        {% csrf_token %}
+        <div class="text-center mb-3 mr-3">
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-success btn-block" data-toggle="modal" data-target="#ModalCenter{{ info.id }}">Add to my List</button>
+          <!-- Modal -->
+          <div class="modal fade" id="ModalCenter{{ info.id }}" tabindex="-1" role="dialog" aria-labelledby="ModalCenter{{ info.id }}Title" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <!-- Modal header -->
+                <div class="modal-header">
+                  <h5 class="modal-title" id="ModalCenter{{ info.id }}Title">{{ info.name }} ({{ year }})</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <!-- Modal body -->
+                <div class="modal-body">
+                  Add this serial to your list?
+                </div>
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                  <button type="submit" name="serial_id" value="{{ info.id }}" class="btn btn-success">Add</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
               </div>
             </div>
           </div>
-          {% endfor %}
-          {% endif %}
         </div>
-
+      </form>
+      {% endif %}
+      {% else %}
+      <div class="alert alert-warning mr-3 text-center" role="alert">
+        {{ info.status }}
       </div>
-      <div class="tab-pane fade" id="nav-creators" role="tabpanel" aria-labelledby="nav-creators-tab">
-        <br>
-        <div class="card-deck justify-content-center">
-          {% if info.created_by %}
-          {% for member in info.created_by %}
-          <div class="card mb-3" style="width: 135px; min-width: 135px; max-width: 135px;">
-            {% if member.profile_path%}
-              <a data-fancybox="gallery_crew" href="https://image.tmdb.org/t/p/w600_and_h900_bestv2{{ member.profile_path }}" data-caption="{{ member.name }}"><img class="card-img-top" src="https://image.tmdb.org/t/p/w138_and_h175_face{{ member.profile_path }}" alt=""></a>
-            {% else %}
-              <img class="align-self-start mr-3" src="{% static 'resources/no_avatar.jpg' %}" width="133px">
-            {% endif %}
-            <div class="card-body">
-              <div class="card-text">
-                <b>{{ member.name }}</b>
+      {% endif %}
+      </p>
+    </div>
+    <div class="media-body">
+      <h3 class="mt-0" align="center">{{ info.name }} ({{ year }})</h3>
+      <nav>
+        <div class="nav nav-tabs" id="nav-tab" role="tablist">
+          <a class="nav-item nav-link active" id="nav-overview-tab" data-toggle="tab" href="#nav-overview" role="tab" aria-controls="nav-overview" aria-selected="true">Overview</a>
+          <a class="nav-item nav-link" id="nav-cast-tab" data-toggle="tab" href="#nav-cast" role="tab" aria-controls="nav-cast" aria-selected="false">Cast</a>
+          <a class="nav-item nav-link" id="nav-creators-tab" data-toggle="tab" href="#nav-creators" role="tab" aria-controls="nav-creators" aria-selected="false">Creators</a>
+        </div>
+      </nav>
+      <div class="tab-content" id="nav-tabContent">
+        <div class="tab-pane fade show active" id="nav-overview" role="tabpanel" aria-labelledby="nav-overview-tab">
+          <br>
+          <p>Rating: {{ info.vote_average }}</p>
+          <p>{{ info.overview }}</p>
+        </div>
+        <div class="tab-pane fade" id="nav-cast" role="tabpanel" aria-labelledby="nav-cast-tab">
+          <br>
+          <div class="card-deck justify-content-center">
+            {% if cast %}
+            {% for member in cast %}
+            <div class="card mb-3" style="width: 135px; min-width: 135px; max-width: 135px;">
+              {% if member.profile_path %}
+                <a data-fancybox="gallery_cast" href="https://image.tmdb.org/t/p/w600_and_h900_bestv2{{ member.profile_path }}" data-caption="{{ member.name }}"><img class="card-img-top" src="https://image.tmdb.org/t/p/w138_and_h175_face{{ member.profile_path }}" alt=""></a>
+              {% else %}
+                <img class="align-self-start mr-3" src="{% static 'resources/no_avatar.jpg' %}" width="133px">
+              {% endif %}
+              <div class="card-body">
+                <div class="card-text">
+                  <b>{{ member.name }}</b>
+                  {% if member.character %}
+                  as {{ member.character }}
+                  {% endif %}
+                </div>
               </div>
             </div>
+            {% endfor %}
+            {% endif %}
           </div>
-          {% endfor %}
-          {% endif %}
+
+        </div>
+        <div class="tab-pane fade" id="nav-creators" role="tabpanel" aria-labelledby="nav-creators-tab">
+          <br>
+          <div class="card-deck justify-content-center">
+            {% if info.created_by %}
+            {% for member in info.created_by %}
+            <div class="card mb-3" style="width: 135px; min-width: 135px; max-width: 135px;">
+              {% if member.profile_path%}
+                <a data-fancybox="gallery_crew" href="https://image.tmdb.org/t/p/w600_and_h900_bestv2{{ member.profile_path }}" data-caption="{{ member.name }}"><img class="card-img-top" src="https://image.tmdb.org/t/p/w138_and_h175_face{{ member.profile_path }}" alt=""></a>
+              {% else %}
+                <img class="align-self-start mr-3" src="{% static 'resources/no_avatar.jpg' %}" width="133px">
+              {% endif %}
+              <div class="card-body">
+                <div class="card-text">
+                  <b>{{ member.name }}</b>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+            {% endif %}
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<hr class="mt-2 mb-2">
+  <hr class="mt-2 mb-2">
 
-<div class="mt-2 mb-3">
-  <h2>Seasons</h2>
-</div>
-
-{% for season in seasons %}
-<div class="media">
-  <div>
-    {% if season.poster_path %}
-      <p><a data-fancybox="gallery{{ season.id }}" href="https://image.tmdb.org/t/p/original{{ season.poster_path }}"><img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w200{{ season.poster_path }}" alt="Generic placeholder image"></a></p>
-    {% else %}
-      <p><img class="align-self-start mr-3" src="{% static 'resources/no-poster-available.png' %}" width="200px"></p>
-    {% endif %}
-    <p>
-    <div class="text-center mr-3">
-      <button class="btn btn-info btn-block" type="button" data-toggle="collapse" data-target="#collapse{{ season.season_number }}" aria-expanded="false" aria-controls="collapse{{ season.season_number }}">
-        Episodes
-      </button>
-    </div>
-    </p>
+  <div class="mt-2 mb-3">
+    <h2>Seasons</h2>
   </div>
-  <div class="media-body">
-    <h3 class="mt-0" align="center">{{ season.name }}</h3>
-    <p>Air date: {{ season.air_date }}</p>
-    <p>Season number: {{ season.season_number }}</p>
-    <p>Episode count: {{ season.episode_count }}</p>
-    {% if season.overview %}
-    <p>{{ season.overview }}</p>
-    {% endif %}
-  </div>
-</div>
 
-<div class="collapse" id="collapse{{ season.season_number }}">
-  <div class="card card-body">
-    {% for episode in season.episodes %}
-    <div class="media">
+  {% for season in seasons %}
+    <div class="media" id="{{ season.name }}">
       <div>
-        {% if episode.still_path %}
-          <p><a data-fancybox="gallery{{ season.season_number }}" href="https://image.tmdb.org/t/p/original{{ episode.still_path }}"><img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w227_and_h127_bestv2{{ episode.still_path }}" alt="Generic placeholder image"></a></p>
+        {% if season.poster_path %}
+          <p><a data-fancybox="gallery{{ season.id }}" href="https://image.tmdb.org/t/p/original{{ season.poster_path }}"><img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w200{{ season.poster_path }}" alt="Generic placeholder image"></a></p>
         {% else %}
-          <p><img class="align-self-start mr-3" src="{% static 'resources/no_image.jpg' %}"></p>
+          <p><img class="align-self-start mr-3" src="{% static 'resources/no-poster-available.png' %}" width="200px"></p>
         {% endif %}
+        <p>
         <div class="text-center mr-3">
-          <p>Episode number: {{ episode.episode_number }}</p>
-          <p>Rating: {{ episode.vote_average }}</p>
+          <button class="btn btn-info btn-block" type="button" data-toggle="collapse" data-target="#collapse{{ season.season_number }}" aria-expanded="false" aria-controls="collapse{{ season.season_number }}">
+            Episodes
+          </button>
         </div>
+        </p>
       </div>
       <div class="media-body">
-        <h3 class="mt-0" align="center">{{ episode.name }}</h3>
-        <p>Air date: {{ episode.air_date }}</p>
-        <p>{{ episode.overview }}</p>
+        <h3 class="mt-0" align="center">{{ season.name }}</h3>
+        <p>Air date: {{ season.air_date }}</p>
+        <p>Season number: {{ season.season_number }}</p>
+        <p>Episode count: {{ season.episode_count }}</p>
+        {% if season.overview %}
+        <p>{{ season.overview }}</p>
+        {% endif %}
       </div>
     </div>
-    <div class="text-right">
-      <button class="btn btn-outline-secondary btn-sm" type="button" data-toggle="collapse" data-target="#collapse{{ season.season_number }}" aria-expanded="false" aria-controls="collapse{{ season.season_number }}">close</button>
+
+    <div class="collapse" id="collapse{{ season.season_number }}">
+      <div class="card card-body">
+        {% for episode in season.episodes %}
+        <div class="media">
+          <div>
+            {% if episode.still_path %}
+              <p><a data-fancybox="gallery{{ season.season_number }}" href="https://image.tmdb.org/t/p/original{{ episode.still_path }}"><img class="align-self-start mr-3" src="https://image.tmdb.org/t/p/w227_and_h127_bestv2{{ episode.still_path }}" alt="Generic placeholder image"></a></p>
+            {% else %}
+              <p><img class="align-self-start mr-3" src="{% static 'resources/no_image.jpg' %}"></p>
+            {% endif %}
+            <div class="text-center mr-3">
+              <p>Episode number: {{ episode.episode_number }}</p>
+              <p>Rating: {{ episode.vote_average }}</p>
+            </div>
+          </div>
+          <div class="media-body">
+            <h3 class="mt-0" align="center">{{ episode.name }}</h3>
+            <p>Air date: {{ episode.air_date }}</p>
+            <p>{{ episode.overview }}</p>
+          </div>
+        </div>
+        <div class="text-right">
+          <a href="#{{ season.name }}"><button class="btn btn-outline-secondary btn-sm" type="button" data-toggle="collapse" data-target="#collapse{{ season.season_number }}" aria-expanded="false" aria-controls="collapse{{ season.season_number }}">close</button></a>
+        </div>
+        <hr class="mt-2 mb-4">
+        {% endfor %}
+          <button class="btn btn-outline-secondary btn-sm" type="button" data-toggle="collapse" data-target="#collapse{{ season.season_number }}" aria-expanded="false" aria-controls="collapse{{ season.season_number }}">close</button>
+      </div>
+      <br>
     </div>
     <hr class="mt-2 mb-4">
-    {% endfor %}
-    <button class="btn btn-outline-secondary btn-sm" type="button" data-toggle="collapse" data-target="#collapse{{ season.season_number }}" aria-expanded="false" aria-controls="collapse{{ season.season_number }}">
-      close
-    </button>
-  </div>
-  <br>
-</div>
-<hr class="mt-2 mb-4">
 
-{% endfor %}
+  {% endfor %}
 {% endblock %}
 
 {% block button %}
   <div class="float-right align-bottom float-button">
     <div class="shadow bg-white rounded">
-      <a href="{% url "my_serials:search" %}" class="btn btn-success" role="button">Find Serial</a>
+      <div class="btn-group btn-group-justified btn-block" role="group">
+        <a href="#top" class="btn btn-info" role="button">&#8593;</a>
+        <a href="{% url "my_serials:search" %}" class="btn btn-success" role="button">&#8981;</a>
+        <a href="#bottom" class="btn btn-info" role="button">&#8595;</a>
+      </div>
     </div>
   </div>
 {% endblock %}
