--- a/my_serials/templates/serial/popular.html
+++ b/my_serials/templates/serial/popular.html
@@ -90,7 +90,11 @@
 {% block button %}
   <div class="float-right align-bottom float-button">
     <div class="shadow bg-white rounded">
-      <a href="{% url "my_serials:search" %}" class="btn btn-success" role="button">Find Serial</a>
+      <div class="btn-group btn-group-justified btn-block" role="group">
+        <a href="#top" class="btn btn-info" role="button">&#8593;</a>
+        <a href="{% url "my_serials:search" %}" class="btn btn-success" role="button">&#8981;</a>
+        <a href="#bottom" class="btn btn-info" role="button">&#8595;</a>
+      </div>
     </div>
   </div>
 {% endblock %}
